--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,8 +7,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
-
+    
+	<Button
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:id="@+id/select_contact"
+	    android:text="@string/pick_contact"
+	    android:onClick="launchContactPicker" />
+    
     <ScrollView
+        android:layout_below="@id/select_contact"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
